# gator

./: .gitignore  GNUmakefile  MANIFEST.in  README.md  README.rst  requirements-locked.txt  requirements.txt  setup.cfg  setup.py
gator/: __init__.py  cli.py  config.py  core.py  environment.py  exceptions.py
gator/default_conf/: environments.yml  gator.yml  logging.yml
gator/plugins/: __init__.py  base.py  manager.py
gator/plugins/blockdevice/: base.py  linux.py  manager.py  null.py
gator/plugins/blockdevice/default_conf/: gator.plugins.blockdevice.linux.yml
gator/plugins/cloud/: base.py  ec2.py  manager.py
gator/plugins/cloud/default_conf/: gator.plugins.cloud.ec2.yml
gator/plugins/distro/: base.py  debian.py  linux.py  manager.py  redhat.py
gator/plugins/distro/default_conf/: gator.plugins.distro.debian.yml  gator.plugins.distro.redhat.yml
gator/plugins/finalizer/: base.py  manager.py  tagging_base.py  tagging_ebs.py  tagging_s3.py
gator/plugins/finalizer/default_conf/: gator.plugins.finalizer.tagging_ebs.yml  gator.plugins.finalizer.tagging_s3.yml
gator/plugins/metrics/: base.py  logger.py  manager.py
gator/plugins/provisioner/: apt.py  aptitude.py  base.py  manager.py  yum.py
gator/plugins/provisioner/default_conf/: gator.plugins.provisioner.apt.yml
gator/plugins/volume/: base.py  linux.py  manager.py
gator/plugins/volume/default_conf/: gator.plugins.volume.linux.yml
gator/util/: __init__.py  linux.py  metrics.py
