#
#
# Copyright 2022 Hale Terminal LLC
#
#

[metadata]
name = gator
description-file = README.rst
author = Hale Terminal Engineering Tools
author_email = development@hale-terminal.com
url = https://github.com/hale-terminal/gator 
packages = find_packages(exclude=exclude_packages)
package_data = package_data
package_dir = {'gator': 'gator'}
include_package_data = True
zip_safe = False
install_requires = requires 
entry_points = entry_points


[files]
packages =
    gator 

[entry_points]
console_scripts =
    gator = gator.cli:run 
    gator-plugin = gator.cli:plugin_manager 

gator.plugins.cloud =
    ec2 = gator.plugins.cloud.ec2:EC2CloudPlugin

gator.plugins.distro =
    debian = gator.plugins.distro.debian:DebianDistroPlugin
    redhat = gator.plugins.distro.redhat:RedHatDistroPlugin

gator.plugins.provisioner =
    yum = gator.plugins.provisioner.yum:YumProvisionerPlugin
    apt = gator.plugins.provisioner.apt:AptProvisionerPlugin
    aptitude = gator.plugins.provisioner.aptitude:AptitudeProvisionerPlugin

gator.plugins.volume =
    linux = gator.plugins.volume.linux:LinuxVolumePlugin

gator.plugins.blockdevice =
    linux = gator.plugins.blockdevice.linux:LinuxBlockDevicePlugin
    null = gator.plugins.blockdevice.null:NullBlockDevicePlugin

gator.plugins.finalizer =
    tagging_ebs = gator.plugins.finalizer.tagging_ebs:TaggingEBSFinalizerPlugin
    tagging_s3 = gator.plugins.finalizer.tagging_s3:TaggingS3FinalizerPlugin

gator.plugins.metrics =
    logger = gator.plugins.metrics.logger:LoggerMetricsPlugin

[bdist_rpm]
requires = python-boto >= 2.7 python-bunch python-decorator python-logutils python-pyyaml python-requests python-stevedore python-simplejson

[flake8]
ignore = E501, E731